# alasco-money

./: .cursorrules  .mise.toml  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  _original_money.py  alasco_money.pyi  pyproject.toml
.github/workflows/: CI.yml  build.yml  pytest.yaml  release.yml  test.yml
pytests/: test_money.py  test_money_pydantic_schema.py  test_money_pydantic_validation.py  test_money_vat.py  test_sum.py
src/: decimals.rs  lib.rs  money.rs  money_vat.rs  money_vat_ratio.rs  traits.rs
