[package]
name = "alasco-money"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "alasco_money"
crate-type = ["cdylib"]

[dependencies]
env_logger = "0.11.3"
pyo3 = { version = "0.19.0", features = ["rust_decimal"] }
rust_decimal = "1.35.0"
