[package]
name = "alasco-money"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "alasco_money"
crate-type = ["cdylib"]

[dependencies]
env_logger = "0.11.3"
pyo3 = { version = "0.22", features = ["rust_decimal"] }
regex = "1.10.5"
rust_decimal = "1.35.0"
