[project]
name = "alasco-money"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.uv]
dev-dependencies = [
    "maturin",
    "pytest",
    "pydantic>=2.10.6",
    "pip>=25.0.1",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"
